# mp-deploy-samba

./: .envrc  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
.github/workflows/: quality-check.yaml
assets/cloud-init/: cloud-config.yaml
src/samba/: app.py  model.py
